// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateDowntimePreview should render CreateDowntimePreview with correct one time duration based downtime values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
    >
      <p
        class="StyledProps--font StyledProps--main label"
        style="width: 120px;"
        title="summary"
      >
        summary
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Starting on 2023-08-11 09:47 AM (Asia/Calcutta) for 30 Minutes
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateDowntimePreview should render CreateDowntimePreview with correct one time end time based downtime values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
    >
      <p
        class="StyledProps--font StyledProps--main label"
        style="width: 120px;"
        title="summary"
      >
        summary
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Starting on 2023-08-11 09:47 AM (Asia/Calcutta) till 2023-11-12 02:47 AM
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateDowntimePreview should render CreateDowntimePreview with correct recurring downtime values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
    >
      <p
        class="StyledProps--font StyledProps--main label"
        style="width: 120px;"
        title="summary"
      >
        summary
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Starting on 2023-08-11 09:47 AM (Asia/Bangkok) for 30 Minutes
        </p>
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Repeats after 2 Week until 2025-03-13 06:27 AM
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateDowntimePreview should render CreateDowntimePreview with empty value 1`] = `<div />`;
